--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#05342F",
-        "titleBar.activeBackground": "#074942",
-        "titleBar.activeForeground": "#ECFDFB"
+        "activityBar.background": "#083510",
+        "titleBar.activeBackground": "#0B4B16",
+        "titleBar.activeForeground": "#F0FDF2"
     }
 }
